// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="Blog | Smart Contract Programmer"
  />
  <ForwardRef
    defaultActiveKey="en"
    id="uncontrolled-tab-example"
  >
    <Tab
      eventKey="en"
      title="English"
    >
      <PostsByYear
        posts={
          Array [
            Object {
              "component": [Function],
              "date": "2019-01-03",
              "lang": "en",
              "title": "Introduction to Ethereum Payment Channels Video",
            },
            Object {
              "component": [Function],
              "date": "2019-01-02",
              "lang": "en",
              "title": "Implementing Harberger Tax Deeds",
            },
            Object {
              "component": [Function],
              "date": "2018-10-11",
              "lang": "en",
              "title": "Writing a Dollar Auction Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-10-10",
              "lang": "en",
              "title": "Writing a Penny Auction Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-10-01",
              "lang": "en",
              "title": "Contracts Calling Arbitrary Functions",
            },
            Object {
              "component": [Function],
              "date": "2018-01-12",
              "lang": "en",
              "title": "Writing an ERC20 Token Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-01-02",
              "lang": "en",
              "title": "What is an Ethereum Token?",
            },
            Object {
              "component": [Function],
              "date": "2018-01-01",
              "lang": "en",
              "title": "Logging and Watching Solidity Events",
            },
            Object {
              "component": [Function],
              "date": "2017-12-23",
              "lang": "en",
              "title": "How Ethereum Transactions Work",
            },
            Object {
              "component": [Function],
              "date": "2017-12-22",
              "lang": "en",
              "title": "Checking the Sender in a Smart Contract",
            },
            Object {
              "component": [Function],
              "date": "2017-12-12",
              "lang": "en",
              "title": "Testing and Deploying Smart Contracts with Remix",
            },
          ]
        }
      />
    </Tab>
    <Tab
      eventKey="jp"
      title="Japanese"
    >
      <PostsByYear
        posts={
          Array [
            Object {
              "component": [Function],
              "date": "2018-03-10",
              "lang": "jp",
              "title": "qwer",
            },
          ]
        }
      />
    </Tab>
  </ForwardRef>
</Layout>
`;

exports[`jp 1`] = `
<Layout
  lang="jp"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="jp"
    meta={Array []}
    title="ブログ | Smart Contract Programmer"
  />
  <ForwardRef
    defaultActiveKey="jp"
    id="uncontrolled-tab-example"
  >
    <Tab
      eventKey="en"
      title="English"
    >
      <PostsByYear
        posts={
          Array [
            Object {
              "component": [Function],
              "date": "2019-01-03",
              "lang": "en",
              "title": "Introduction to Ethereum Payment Channels Video",
            },
            Object {
              "component": [Function],
              "date": "2019-01-02",
              "lang": "en",
              "title": "Implementing Harberger Tax Deeds",
            },
            Object {
              "component": [Function],
              "date": "2018-10-11",
              "lang": "en",
              "title": "Writing a Dollar Auction Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-10-10",
              "lang": "en",
              "title": "Writing a Penny Auction Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-10-01",
              "lang": "en",
              "title": "Contracts Calling Arbitrary Functions",
            },
            Object {
              "component": [Function],
              "date": "2018-01-12",
              "lang": "en",
              "title": "Writing an ERC20 Token Contract",
            },
            Object {
              "component": [Function],
              "date": "2018-01-02",
              "lang": "en",
              "title": "What is an Ethereum Token?",
            },
            Object {
              "component": [Function],
              "date": "2018-01-01",
              "lang": "en",
              "title": "Logging and Watching Solidity Events",
            },
            Object {
              "component": [Function],
              "date": "2017-12-23",
              "lang": "en",
              "title": "How Ethereum Transactions Work",
            },
            Object {
              "component": [Function],
              "date": "2017-12-22",
              "lang": "en",
              "title": "Checking the Sender in a Smart Contract",
            },
            Object {
              "component": [Function],
              "date": "2017-12-12",
              "lang": "en",
              "title": "Testing and Deploying Smart Contracts with Remix",
            },
          ]
        }
      />
    </Tab>
    <Tab
      eventKey="jp"
      title="Japanese"
    >
      <PostsByYear
        posts={
          Array [
            Object {
              "component": [Function],
              "date": "2018-03-10",
              "lang": "jp",
              "title": "qwer",
            },
          ]
        }
      />
    </Tab>
  </ForwardRef>
</Layout>
`;
